[package]
name = "joblinlib"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = { version = "1.0.140" }
serde = { version = "1.0.219", features = ["derive"] }
tokio = {version = "1.45.1", features = ["full"]}
env_logger = "0.11.8"
tokio-util = {  version = "0.7.15", features = ["codec"] }
futures = "0.3.31"
tokio-serde = { version = "0.9.0", features = ["bincode", "json", "serde_json"] }
anyhow = "1.0.98"
log = "0.4.27"
