[package]
name = "joblinsvr"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.45.1", features = ["full"]}
env_logger = "0.11.8"
tokio-util = {  version = "0.7.15", features = ["codec"] }
futures = "0.3.31"
serde_json = "1.0.140"
tokio-serde = { version = "0.9.0", features = ["bincode", "json", "serde_json"] }
joblinlib = { path = "../joblinlib" }
log = "0.4.27"
shell-words = "1.1.0"
